work up to 17 oct 21

--- a/year-two/index.html
+++ b/year-two/index.html
@@ -482,138 +482,147 @@ blockquote {
 .pdf:lang(zh-TW) .mono { font-family: PT Mono, iawriter-mono, Nitti, Menlo, Courier, monospace, 'Twemoji', 'Noto Color Emoji', 'Noto Sans Mono CJK TC'; }
 .pdf:lang(ko-KR) .mono { font-family: PT Mono, iawriter-mono, Nitti, Menlo, Courier, monospace, 'Twemoji', 'Noto Color Emoji', 'Noto Sans Mono CJK KR'; }
 .highlight-default {
+	color: rgba(55, 53, 47, 1);
 }
 .highlight-gray {
-	color: rgb(155,154,151);
+	color: rgba(120, 119, 116, 1);
+	fill: rgba(145, 145, 142, 1);
 }
 .highlight-brown {
-	color: rgb(100,71,58);
+	color: rgba(159, 107, 83, 1);
+	fill: rgba(187, 132, 108, 1);
 }
 .highlight-orange {
-	color: rgb(217,115,13);
+	color: rgba(200, 112, 34, 1);
+	fill: rgba(215, 129, 58, 1);
 }
 .highlight-yellow {
-	color: rgb(223,171,1);
+	color: rgba(181, 126, 51, 1);
+	fill: rgba(203, 148, 51, 1);
 }
 .highlight-teal {
-	color: rgb(15,123,108);
+	color: rgba(68, 131, 97, 1);
+	fill: rgba(108, 155, 125, 1);
 }
 .highlight-blue {
-	color: rgb(11,110,153);
+	color: rgba(51, 126, 169, 1);
+	fill: rgba(91, 151, 189, 1);
 }
 .highlight-purple {
-	color: rgb(105,64,165);
+	color: rgba(144, 101, 176, 1);
+	fill: rgba(167, 130, 195, 1);
 }
 .highlight-pink {
-	color: rgb(173,26,114);
+	color: rgba(193, 76, 138, 1);
+	fill: rgba(205, 116, 159, 1);
 }
 .highlight-red {
-	color: rgb(224,62,62);
+	color: rgba(212, 76, 71, 1);
+	fill: rgba(225, 111, 100, 1);
 }
 .highlight-gray_background {
-	background: rgb(235,236,237);
+	background: rgba(241, 241, 239, 1);
 }
 .highlight-brown_background {
-	background: rgb(233,229,227);
+	background: rgba(244, 238, 238, 1);
 }
 .highlight-orange_background {
-	background: rgb(250,235,221);
+	background: rgba(252, 237, 231, 1);
 }
 .highlight-yellow_background {
-	background: rgb(251,243,219);
+	background: rgba(245, 241, 229, 1);
 }
 .highlight-teal_background {
-	background: rgb(221,237,234);
+	background: rgba(237, 243, 236, 1);
 }
 .highlight-blue_background {
-	background: rgb(221,235,241);
+	background: rgba(231, 243, 248, 1);
 }
 .highlight-purple_background {
-	background: rgb(234,228,242);
+	background: rgba(244, 240, 247, 1);
 }
 .highlight-pink_background {
-	background: rgb(244,223,235);
+	background: rgba(249, 238, 243, 1);
 }
 .highlight-red_background {
-	background: rgb(251,228,228);
+	background: rgba(253, 235, 236, 1);
 }
 .block-color-default {
 	color: inherit;
 	fill: inherit;
 }
 .block-color-gray {
-	color: rgba(55, 53, 47, 0.6);
-	fill: rgba(55, 53, 47, 0.6);
+	color: rgba(120, 119, 116, 1);
+	fill: rgba(145, 145, 142, 1);
 }
 .block-color-brown {
-	color: rgb(100,71,58);
-	fill: rgb(100,71,58);
+	color: rgba(159, 107, 83, 1);
+	fill: rgba(187, 132, 108, 1);
 }
 .block-color-orange {
-	color: rgb(217,115,13);
-	fill: rgb(217,115,13);
+	color: rgba(200, 112, 34, 1);
+	fill: rgba(215, 129, 58, 1);
 }
 .block-color-yellow {
-	color: rgb(223,171,1);
-	fill: rgb(223,171,1);
+	color: rgba(181, 126, 51, 1);
+	fill: rgba(203, 148, 51, 1);
 }
 .block-color-teal {
-	color: rgb(15,123,108);
-	fill: rgb(15,123,108);
+	color: rgba(68, 131, 97, 1);
+	fill: rgba(108, 155, 125, 1);
 }
 .block-color-blue {
-	color: rgb(11,110,153);
-	fill: rgb(11,110,153);
+	color: rgba(51, 126, 169, 1);
+	fill: rgba(91, 151, 189, 1);
 }
 .block-color-purple {
-	color: rgb(105,64,165);
-	fill: rgb(105,64,165);
+	color: rgba(144, 101, 176, 1);
+	fill: rgba(167, 130, 195, 1);
 }
 .block-color-pink {
-	color: rgb(173,26,114);
-	fill: rgb(173,26,114);
+	color: rgba(193, 76, 138, 1);
+	fill: rgba(205, 116, 159, 1);
 }
 .block-color-red {
-	color: rgb(224,62,62);
-	fill: rgb(224,62,62);
+	color: rgba(212, 76, 71, 1);
+	fill: rgba(225, 111, 100, 1);
 }
 .block-color-gray_background {
-	background: rgb(235,236,237);
+	background: rgba(241, 241, 239, 1);
 }
 .block-color-brown_background {
-	background: rgb(233,229,227);
+	background: rgba(244, 238, 238, 1);
 }
 .block-color-orange_background {
-	background: rgb(250,235,221);
+	background: rgba(252, 237, 231, 1);
 }
 .block-color-yellow_background {
-	background: rgb(251,243,219);
+	background: rgba(245, 241, 229, 1);
 }
 .block-color-teal_background {
-	background: rgb(221,237,234);
+	background: rgba(237, 243, 236, 1);
 }
 .block-color-blue_background {
-	background: rgb(221,235,241);
+	background: rgba(231, 243, 248, 1);
 }
 .block-color-purple_background {
-	background: rgb(234,228,242);
+	background: rgba(244, 240, 247, 1);
 }
 .block-color-pink_background {
-	background: rgb(244,223,235);
+	background: rgba(249, 238, 243, 1);
 }
 .block-color-red_background {
-	background: rgb(251,228,228);
+	background: rgba(253, 235, 236, 1);
 }
-.select-value-color-default { background-color: rgba(206,205,202,0.5); }
-.select-value-color-gray { background-color: rgba(155,154,151, 0.4); }
-.select-value-color-brown { background-color: rgba(140,46,0,0.2); }
-.select-value-color-orange { background-color: rgba(245,93,0,0.2); }
-.select-value-color-yellow { background-color: rgba(233,168,0,0.2); }
-.select-value-color-green { background-color: rgba(0,135,107,0.2); }
-.select-value-color-blue { background-color: rgba(0,120,223,0.2); }
-.select-value-color-purple { background-color: rgba(103,36,222,0.2); }
-.select-value-color-pink { background-color: rgba(221,0,129,0.2); }
-.select-value-color-red { background-color: rgba(255,0,26,0.2); }
+.select-value-color-pink { background-color: rgba(245, 224, 233, 1); }
+.select-value-color-purple { background-color: rgba(232, 222, 238, 1); }
+.select-value-color-green { background-color: rgba(219, 237, 219, 1); }
+.select-value-color-gray { background-color: rgba(227, 226, 224, 1); }
+.select-value-color-orange { background-color: rgba(250, 222, 201, 1); }
+.select-value-color-brown { background-color: rgba(238, 224, 218, 1); }
+.select-value-color-red { background-color: rgba(255, 226, 221, 1); }
+.select-value-color-yellow { background-color: rgba(244, 231, 202, 1); }
+.select-value-color-blue { background-color: rgba(211, 229, 239, 1); }
 
 .checkbox {
 	display: inline-flex;
@@ -633,5 +642,5 @@ blockquote {
 	background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2016%2016%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%3Crect%20x%3D%220.75%22%20y%3D%220.75%22%20width%3D%2214.5%22%20height%3D%2214.5%22%20fill%3D%22white%22%20stroke%3D%22%2336352F%22%20stroke-width%3D%221.5%22%2F%3E%0A%3C%2Fsvg%3E");
 }
 	
-</style></head><body><article id="289f3c61-3fb5-49b8-b207-343d4bae28b8" class="page sans"><header><img class="page-cover-image" src="Y2S1%204fb74d17be324067a933c829ec632583/chihiro043.jpg" style="object-position:center 83.47%"/><div class="page-header-icon page-header-icon-with-cover"><span class="icon">🔱</span></div><h1 class="page-title">Y2S1</h1></header><div class="page-body"><hr id="923aaa7b-aecc-4e0a-ac47-c3d86edd860d"/><div id="1c686628-8b80-4d0d-aa26-6ad308dac658" class="column-list"><div id="0bcf49d9-6843-4223-93a3-26d224c9ada1" style="width:50%" class="column"><figure id="2705bf43-0dfc-4bd4-a5d0-caaace8ee132" class="block-color-teal_background link-to-page"><a href="Y2S1%204fb74d17be324067a933c829ec632583/2208%20Intelligent%20Systems%202705bf430dfc4bd4a5d0caaace8ee132.html"><span class="icon">☘️</span>2208 Intelligent Systems</a></figure></div><div id="3bb2dd96-8956-41ad-8e7e-57b27b444c59" style="width:50%" class="column"><figure id="89daf080-746c-467c-8fc3-8c881199b5ed" class="block-color-yellow_background link-to-page"><a href="Y2S1%204fb74d17be324067a933c829ec632583/2209%20Programming%20III%2089daf080746c467c8fc38c881199b5ed.html"><span class="icon">⚙️</span>2209 Programming III</a></figure></div></div><div id="3ace9096-0d62-4686-bfc4-4bd8ab04c510" class="column-list"><div id="1f2090ef-1b77-4d2c-a65d-28f1556a51c9" style="width:50%" class="column"><figure id="2e03e8f7-6988-4567-9b2d-e1ad76a4ca63" class="block-color-pink_background link-to-page"><a href="Y2S1%204fb74d17be324067a933c829ec632583/2210%20Theory%20of%20Computing%202e03e8f7698845679b2de1ad76a4ca63.html"><span class="icon">⛔</span>2210 Theory of Computing</a></figure></div><div id="8258164f-23c2-4826-9e66-25b2369299c2" style="width:49.99999999999999%" class="column"><figure id="a578061a-5720-47db-842a-322b55d5209f" class="block-color-red_background link-to-page"><a href="Y2S1%204fb74d17be324067a933c829ec632583/2213%20Interaction%20Design%20a578061a572047db842a322b55d5209f.html"><span class="icon">🧱</span>2213 Interaction Design</a></figure></div></div><hr id="46a0a806-db59-4dcb-bb54-5a8da00f54a0"/><figure id="4fb74d17-be32-4067-a933-c829ec632583" class="image"><a href="Y2S1%204fb74d17be324067a933c829ec632583/tunnel.jfif"><img style="width:700px" src="Y2S1%204fb74d17be324067a933c829ec632583/tunnel.jfif"/></a></figure><p id="29b5e0ee-7784-43bf-b8f8-f4775ec7b90f" class="">
+</style></head><body><article id="289f3c61-3fb5-49b8-b207-343d4bae28b8" class="page sans"><header><img class="page-cover-image" src="Y2S1%204fb74d17be324067a933c829ec632583/chihiro043.jpg" style="object-position:center 83.47%"/><div class="page-header-icon page-header-icon-with-cover"><span class="icon">🔱</span></div><h1 class="page-title">Y2S1</h1></header><div class="page-body"><hr id="923aaa7b-aecc-4e0a-ac47-c3d86edd860d"/><div id="1c686628-8b80-4d0d-aa26-6ad308dac658" class="column-list"><div id="0bcf49d9-6843-4223-93a3-26d224c9ada1" style="width:50%" class="column"><figure id="2705bf43-0dfc-4bd4-a5d0-caaace8ee132" class="block-color-teal_background link-to-page"><a href="Y2S1%204fb74d17be324067a933c829ec632583/2208%20Intelligent%20Systems%202705bf430dfc4bd4a5d0caaace8ee132.html"><span class="icon">☘️</span>2208 Intelligent Systems</a></figure></div><div id="3bb2dd96-8956-41ad-8e7e-57b27b444c59" style="width:50%" class="column"><figure id="89daf080-746c-467c-8fc3-8c881199b5ed" class="block-color-yellow_background link-to-page"><a href="Y2S1%204fb74d17be324067a933c829ec632583/2209%20Programming%20III%2089daf080746c467c8fc38c881199b5ed.html"><span class="icon">⚙️</span>2209 Programming III</a></figure></div></div><div id="3ace9096-0d62-4686-bfc4-4bd8ab04c510" class="column-list"><div id="1f2090ef-1b77-4d2c-a65d-28f1556a51c9" style="width:50%" class="column"><figure id="2e03e8f7-6988-4567-9b2d-e1ad76a4ca63" class="block-color-pink_background link-to-page"><a href="Y2S1%204fb74d17be324067a933c829ec632583/2210%20Theory%20of%20Computing%202e03e8f7698845679b2de1ad76a4ca63.html"><span class="icon">⛔</span>2210 Theory of Computing</a></figure></div><div id="8258164f-23c2-4826-9e66-25b2369299c2" style="width:49.99999999999999%" class="column"><figure id="a578061a-5720-47db-842a-322b55d5209f" class="block-color-red_background link-to-page"><a href="Y2S1%204fb74d17be324067a933c829ec632583/2213%20Interaction%20Design%20a578061a572047db842a322b55d5209f.html"><span class="icon">🧱</span>2213 Interaction Design</a></figure></div></div><hr id="46a0a806-db59-4dcb-bb54-5a8da00f54a0"/><figure id="4fb74d17-be32-4067-a933-c829ec632583" class="image"><a href="Y2S1%204fb74d17be324067a933c829ec632583/tunnel.jfif"><img style="width:720px" src="Y2S1%204fb74d17be324067a933c829ec632583/tunnel.jfif"/></a><figcaption><em>@waneella_</em> on twitter</figcaption></figure><p id="29b5e0ee-7784-43bf-b8f8-f4775ec7b90f" class="">
 </p></div></article></body></html>
